--- a/client/src/components/css/SortFilter.scss
+++ b/client/src/components/css/SortFilter.scss
@@ -181,3 +181,37 @@
         }
     }
 }
+
+// media queries
+
+@media screen and (min-width: 480px) {
+    .sort__filter{
+        .sort__filter--btn{
+            max-width: 50%;
+            margin: 0 auto;
+        }
+    }
+}
+@media screen and (min-width: 1200px) {
+    .sort__filter{
+        position: relative;
+        padding: 0 20px;
+        width: 70%;
+        margin: 30px auto;
+        .sort__filter--btn{
+            display: none;
+            max-width: 50%;
+            margin: 0 auto;
+        }
+        .container{
+            display: block;
+            position: relative;
+            height: 100%;
+            .sub__title{
+                svg{
+                    display: none;
+                }
+            }
+        }
+    }
+}
