--- a/client/src/components/pages/auth/css/signup.scss
+++ b/client/src/components/pages/auth/css/signup.scss
@@ -129,3 +129,31 @@
         }
     }
 }
+
+
+//media query
+@media screen and (min-width:768px) {
+    .signup{
+        max-width: 85%;
+        margin: 0 auto;
+        .container{
+            .signup__form{
+                .title{
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
+@media screen and (min-width:992px) {
+    .signup{
+        max-width: 75%;
+        margin: 0 auto;
+    }
+}
+@media screen and (min-width:1200px) {
+    .signup{
+        max-width: 55%;
+        margin: 0 auto;
+    }
+}
