--- a/client/src/components/css/MainProducts.scss
+++ b/client/src/components/css/MainProducts.scss
@@ -6,6 +6,7 @@
     img{
         width: 100%;
         min-height: 100%;
+        cursor: pointer;
     }
     .product{
         position: relative;
