--- a/client/src/components/css/Products.css
+++ b/client/src/components/css/Products.css
@@ -93,7 +93,7 @@
   font-size: 14px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) {
   .products__section .container .item {
     width: 33.33%;
     padding: 0 8px;
@@ -107,7 +107,7 @@
   }
   .products__section .container .item:nth-child(3n) {
     padding-right: 0;
-    padding-left: 11px;
+    padding-left: 14px;
   }
   .products__section .container .item .img img {
     border: 0;
@@ -118,7 +118,11 @@
 
 @media screen and (min-width: 1025px) {
   .products__section .container .item {
-    width: 20%;
+    width: 25%;
+  }
+  .products__section .container .item:nth-child(4n) {
+    padding-right: 0;
+    padding-left: 14px;
   }
   .products__section .container .item .img {
     display: block;
