--- a/client/src/components/css/Products.scss
+++ b/client/src/components/css/Products.scss
@@ -72,7 +72,7 @@
 
 // media queries
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) {
     .products__section{
         .container{
             .item{
@@ -87,7 +87,7 @@
                 }
                 &:nth-child(3n){
                     padding-right: 0;
-                    padding-left: 11px;
+                    padding-left: 14px;
                 }
                 .img{
                     img{
@@ -105,7 +105,11 @@
     .products__section{
         .container{
             .item{
-                width: 20%;
+                width: 25%;
+                &:nth-child(4n){
+                    padding-right: 0;
+                    padding-left: 14px;
+                }
                 .img{
                     display: block;   
                 }
