--- a/client/src/components/nav/css/largeNav.scss
+++ b/client/src/components/nav/css/largeNav.scss
@@ -79,6 +79,7 @@
                         color: rgb(226, 226, 226);
                         font-weight: bold;
                         font-size: 14px;
+                        cursor: pointer;
                     }
                 }
             }
