--- a/client/src/components/nav/css/navAuth.scss
+++ b/client/src/components/nav/css/navAuth.scss
@@ -7,8 +7,8 @@
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    top: 30px;
-    right: 20px;
+    // top: 30px;
+    right: 0px;
     background-color: #fff;
     box-shadow: 0px 0px 10px grey;
     padding: 20px;
