--- a/client/src/components/css/Products.scss
+++ b/client/src/components/css/Products.scss
@@ -57,6 +57,7 @@
                 }
             }
             .body{
+                margin-top: 10px;
                 a{
                     text-align: center;
                 }
