--- a/client/src/components/css/ProductDetail.css
+++ b/client/src/components/css/ProductDetail.css
@@ -174,6 +174,19 @@
   margin-right: 7px;
 }
 
+.product__detail .product__desc {
+  margin-top: 30px;
+}
+
+.product__detail .product__desc h3 {
+  background-color: #e3e3e3;
+  text-transform: capitalize;
+  margin: 10px 0 20px;
+  font-weight: 500;
+  padding: 0 5px;
+  font-size: 16px;
+}
+
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .product__detail .img {
     display: -webkit-box;
@@ -209,7 +222,8 @@
         grid-template-columns: 60% 40%;
     -ms-grid-rows: auto;
         grid-template-rows: auto;
-        grid-template-areas: "img title" "img price" "img form" "img .";
+        grid-template-areas: "img title" "img price" "img form" "img pd" "img .";
+    padding: 0 20px 0 10px;
   }
   .product__detail .product__container .product__title {
     -ms-grid-row: 1;
@@ -218,7 +232,7 @@
   }
   .product__detail .product__container .img {
     -ms-grid-row: 1;
-    -ms-grid-row-span: 4;
+    -ms-grid-row-span: 5;
     -ms-grid-column: 1;
     grid-area: img;
     padding-right: 20px;
@@ -240,13 +254,14 @@
         -ms-flex-align: center;
             align-items: center;
     width: 100%;
+    position: relative;
   }
   .product__detail .product__container form .add__to__cart {
     margin: 0;
     width: 50%;
   }
   .product__detail .product__container form .add__to__cart .add__to__cart--btn {
-    padding: 10px;
+    padding: 9px 0;
   }
   .product__detail .product__container form .add__to__cart button {
     border-radius: 4px;
@@ -255,12 +270,20 @@
     width: 50%;
     margin: 0;
     padding-right: 5px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  .product__detail .product__container .product__desc {
+    -ms-grid-row: 4;
+    -ms-grid-column: 2;
+    grid-area: pd;
+    margin-top: 40px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .product__detail {
-    max-width: 75%;
+    max-width: 80%;
     margin: 0 auto 30px;
   }
   .product__detail .img {
