--- a/client/src/components/nav/css/navAuth.css
+++ b/client/src/components/nav/css/navAuth.css
@@ -6,23 +6,6 @@
 
 .auth__pages {
   display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: absolute;
-  right: 0px;
-  background-color: #fff;
-  -webkit-box-shadow: 0px 0px 10px grey;
-          box-shadow: 0px 0px 10px grey;
-  padding: 20px;
-  width: 260px;
 }
 
 .auth__pages .btn {
@@ -108,5 +91,29 @@
 
 .auth__pages .user .my__account button {
   padding-left: 7px;
+}
+
+@media screen and (min-width: 992px) {
+  .auth__pages {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: absolute;
+    top: 30px;
+    right: 0px;
+    background-color: #fff;
+    -webkit-box-shadow: 0px 0px 10px grey;
+            box-shadow: 0px 0px 10px grey;
+    padding: 20px;
+    width: 260px;
+    z-index: 4;
+  }
 }
 /*# sourceMappingURL=navAuth.css.map */
