--- a/client/src/components/nav/css/navAuth.scss
+++ b/client/src/components/nav/css/navAuth.scss
@@ -3,16 +3,6 @@
 }
 .auth__pages{
     display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    // top: 30px;
-    right: 0px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px grey;
-    padding: 20px;
-    width: 260px;
     .btn{
         display: flex;
         align-items: center;
@@ -64,5 +54,22 @@
                 padding-left: 7px;
             }
         }
+    }
+}
+
+
+@media screen and (min-width: 992px) {
+    .auth__pages{
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        top: 30px;
+        right: 0px;
+        background-color: #fff;
+        box-shadow: 0px 0px 10px grey;
+        padding: 20px;
+        width: 260px;
+        z-index: 4;
     }
 }
