--- a/client/src/components/nav/css/smallNav.css
+++ b/client/src/components/nav/css/smallNav.css
@@ -154,9 +154,9 @@
   position: fixed;
   top: 0px;
   left: 0;
-  max-width: 65%;
+  width: 100%;
   background-color: #fff;
-  height: 85vh;
+  height: 100vh;
   -webkit-box-shadow: 0px 1px 3px lightgrey;
           box-shadow: 0px 1px 3px lightgrey;
   z-index: 300;
@@ -185,25 +185,77 @@
 }
 
 .small__nav .container .menu .menu__list ul li {
+  font-weight: normal;
   text-transform: capitalize;
   padding: 10px 20px;
   border-bottom: 1px solid #e0e0e0;
   list-style: none;
   margin: 20px 0 0;
-  cursor: pointer;
 }
 
-.small__nav .container .menu .auth__pages {
-  margin: 30px 0 10px;
+.small__nav .container .menu .menu__list ul li .title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-item-align: center;
+      align-self: center;
+  cursor: pointer;
+}
+
+.small__nav .container .menu .menu__list ul li .title h3 {
+  font-weight: inherit;
+}
+
+.small__nav .container .menu .menu__list ul li .show__group {
+  display: inline-block !important;
+}
+
+.small__nav .container .menu .menu__list ul li .group {
+  display: none;
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  height: 100vh;
+  -webkit-box-shadow: 0px 1px 3px lightgrey;
+          box-shadow: 0px 1px 3px lightgrey;
+  z-index: 300;
+  padding: 20px 10px 0;
+}
+
+.small__nav .container .menu .menu__list ul li .group svg {
+  cursor: pointer;
+}
+
+.small__nav .container .menu .menu__list ul li .group p {
+  padding: 10px;
+  border-bottom: 1px solid #e0e0e0;
+  margin: 20px 0 0;
+  cursor: pointer;
+}
+
+.small__nav .container .menu .auth__pages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #fff;
+  padding: 20px;
+  width: 100%;
+  margin: 20px 0;
 }
 
 .small__nav .container .menu .auth__pages .btn {
