--- a/client/src/components/nav/css/smallNav.scss
+++ b/client/src/components/nav/css/smallNav.scss
@@ -103,9 +103,9 @@
             position: fixed;
             top: 0px;
             left: 0;
-            max-width: 65%;
+            width: 100%;
             background-color:#fff;
-            height: 85vh;
+            height: 100vh;
             box-shadow: 0px 1px 3px lightgrey;
             z-index: 300;
             .icon__div{
@@ -123,20 +123,57 @@
                 ul{
                     padding:0;
                     li{
+                        font-weight: normal;
                         text-transform: capitalize;
                         padding: 10px 20px;
                         border-bottom: 1px solid rgb(224, 224, 224);
                         list-style: none;
                         margin: 20px 0 0;
-                        cursor: pointer;
+                        .title{
+                            display: flex;
+                            justify-content: space-between;
+                            align-self: center;
+                            cursor: pointer;
+                            h3{
+                                font-weight: inherit;
+                            }
+                        }
+                        .show__group{
+                            display: inline-block !important;
+                        }
+                        .group{
+                            display: none;
+                            position: fixed;
+                            top: 0px;
+                            left: 0;
+                            width: 100%;
+                            background-color:#fff;
+                            height: 100vh;
+                            box-shadow: 0px 1px 3px lightgrey;
+                            z-index: 300;
+                            padding: 20px 10px 0;
+                            svg{
+                                cursor: pointer;
+                            }
+                            p{
+                                padding: 10px;
+                                border-bottom: 1px solid rgb(224, 224, 224);
+                                margin: 20px 0 0;
+                                cursor: pointer;
+                            }
+                        }
                     }
                 }
             }
             .auth__pages{
-                margin: 30px 0 10px;
                 display: flex;
+                flex-direction: column;
                 justify-content: space-between;
                 align-items: center;
+                background-color: #fff;
+                padding: 20px;
+                width: 100%;
+                margin: 20px 0;
                 .btn{
                     display: flex;
                     align-items: center;
