--- a/client/src/components/css/checkoutItems.scss
+++ b/client/src/components/css/checkoutItems.scss
@@ -1,31 +1,4 @@
-// .payment__items{
-//     margin: 10px 0 !important;
-//     .item{
-//         .img{
-//             border-radius: 12px !important;
-//             border: none !important;
-//             .img__container{
-//                 width: 80px !important;
-//                 padding: 10px 5px !important;
-//             }
-//         }  
-//         .body{
-//             table{
-//                 border-spacing: 0 7px !important;
-//                 tbody{
-//                     @media screen and (min-width: 360px){
-//                         display: grid;
-//                         grid-template-columns: repeat(2, 1fr);
-//                     }
-//                     tr{
-//                         padding: 0;
-//                     }
-//                 }
-//             }
-//         }      
-//     }
-// }
-.checkout__items, .payment__items{
+.checkout__items{
     margin: 30px 0;
     .item{
         width: 100%;
