--- a/client/src/components/css/order.css
+++ b/client/src/components/css/order.css
@@ -1,1 +1,221 @@
-/* No CSS *//*# sourceMappingURL=order.css.map */
+.orders__items {
+  margin: 30px 0;
+}
+
+.orders__items .item {
+  width: 100%;
+  padding: 10px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 175px;
+}
+
+.orders__items .item .img {
+  -webkit-box-flex: 0.30;
+      -ms-flex: 0.30;
+          flex: 0.30;
+  border-radius: 12px;
+}
+
+.orders__items .item .img .img__container {
+  padding: 10px;
+  width: 120px;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.orders__items .item .img .img__container img {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+}
+
+.orders__items .item .body {
+  -webkit-box-flex: 0.70;
+      -ms-flex: 0.70;
+          flex: 0.70;
+  margin-left: 20px;
+}
+
+.orders__items .item .body .cart__tabel {
+  display: none;
+}
+
+.orders__items .item .body a {
+  color: #000;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.orders__items .item .body .body__title {
+  margin: 0 0 10px;
+}
+
+.orders__items .item .body .body__title h3 {
+  text-align: left;
+  font-weight: normal;
+  padding: 0;
+  margin: 0;
+  text-transform: capitalize;
+}
+
+.orders__items .item .body table {
+  border-collapse: separate;
+  border-spacing: 0 10px;
+}
+
+.orders__items .item .body table tr {
+  text-align: left;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 10px 0;
+}
+
+.orders__items .item .body table tr th {
+  padding: 0px 5px 0 0px;
+  font-weight: bold;
+  text-transform: capitalize;
+  font-weight: normal;
+  font-style: italic;
+  color: #292929;
+}
+
+.orders__items .item .body table tr td {
+  font-style: italic;
+  text-transform: uppercase;
+}
+
+.orders__items .item .body .edit__div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 5px;
+}
+
+.orders__items .item .body .edit__div p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+  padding: 0 10px 0 0;
+  color: #303030;
+  text-transform: capitalize;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.orders__items .item .body .edit__div p span {
+  padding-left: 3px;
+}
+
+.orders__items .item .body .edit__div p svg {
+  font-size: 16px;
+}
+
+.orders__items .item .body .edit__div .remove__item {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
+.orders__items .display__form {
+  display: block !important;
+}
+
+.orders__items .edit__form {
+  margin-top: 15px;
+  width: 90%;
+  margin: 15px auto;
+  display: none;
+}
+
+.orders__items .edit__form form {
+  border: 1px solid lightgray;
+  padding: 15px 10px;
+}
+
+.orders__items .edit__form form .form__group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  padding: 0 10px;
+  margin: 0 10px;
+}
+
+.orders__items .edit__form form .form__group .size__options, .orders__items .edit__form form .form__group input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.orders__items .edit__form form .form__group label {
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.orders__items .edit__form form .form__group input, .orders__items .edit__form form .form__group select {
+  padding: 10px;
+  width: 120px;
+  margin: 0 20px 0 0;
+  font-size: 16px;
+  text-transform: uppercase;
+  outline: none;
+}
+
+.orders__items .edit__form form .btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 10px;
+  width: 100%;
+}
+
+.orders__items .edit__form form .btn button {
+  width: 100%;
+  margin-top: 10px;
+}
+
+.orders__items .edit__form form .btn button svg {
+  margin-right: 10px;
+}
+
+.orders__items .edit__form form .btn .save__btn {
+  background-color: #025da8;
+  color: #fff;
+}
+
+.orders__items .edit__form form .btn .cancel__btn {
+  border: 1px solid #025da8;
+}
+/*# sourceMappingURL=order.css.map */
