--- a/client/src/components/css/order.scss
+++ b/client/src/components/css/order.scss
@@ -1,1 +1,156 @@
-// 
+.orders__items{
+    margin: 30px 0;
+    .item{
+        width: 100%;
+        padding: 10px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        min-height: 175px;
+        .img{
+            flex: 0.30;
+            border-radius: 12px;
+            .img__container{
+                padding: 10px;
+                width: 120px;
+                margin:0 auto;
+                height: 100%;
+                img{
+                    width: 100%;
+                    max-width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+        .body{
+            flex: 0.70;
+            margin-left: 20px;
+            .cart__tabel{
+                display: none;
+            }
+            a{
+                color: #000;
+                text-decoration: none;
+                font-size: 16px;
+            }
+            .body__title{
+                margin: 0 0 10px;
+                h3{
+                    text-align: left;
+                    font-weight: normal;
+                    padding: 0;
+                    margin: 0;
+                    text-transform: capitalize;
+                }
+            }
+            table{
+                border-collapse: separate;
+                border-spacing: 0 10px;
+                tr{
+                    text-align: left;
+                    font-family: Georgia, 'Times New Roman', Times, serif;
+                    padding: 10px 0;
+                    th{
+                        padding: 0px 5px 0 0px;
+                        font-weight: bold;
+                        text-transform: capitalize;
+                        font-weight: normal;
+                        font-style: italic;
+                        color: rgb(41, 41, 41);
+
+                    }
+                    td{
+                        font-style: italic;
+                        text-transform: uppercase;
+                    }
+                }
+            }
+            .edit__div{
+                display: flex;
+                align-items: center;
+                margin-top: 5px;
+                p{
+                    display: flex;
+                    align-items: center;
+                    font-size: 12px;
+                    padding: 0 10px 0 0;
+                    color: rgb(48, 48, 48);
+                    text-transform: capitalize;
+                    font-weight: 400;
+                    cursor: pointer;
+                    span{
+                        padding-left: 3px;
+                    }
+                    svg{
+                        font-size: 16px;
+                    }
+                }
+                .remove__item{
+                    max-width: fit-content;
+                }
+            }
+        }
+        
+    }
+    .display__form{
+        display: block !important;
+    }
+    .edit__form{
+        margin-top: 15px;
+        width: 90%;
+        margin: 15px auto;
+        display: none;
+        form{
+            border: 1px solid lightgray;
+            padding: 15px 10px;
+            .form__group{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width:100%;
+                padding: 0 10px;
+                margin: 0 10px;
+
+                .size__options, input{
+                    display: flex;
+                    flex-direction: column;
+                }
+                label{
+                    text-transform: uppercase;
+                    font-size: 14px;
+                }
+                input, select{
+                    padding: 10px;
+                    width: 120px;
+                    margin: 0 20px 0 0;
+                    font-size: 16px;
+                    text-transform: uppercase;
+                    outline: none;
+                }
+            }
+            .btn{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin-top: 10px;
+                width: 100%;
+                button{
+                    width: 100%;
+                    margin-top: 10px;
+                    svg{
+                        margin-right: 10px;
+                    }
+                }
+                .save__btn{
+                    background-color: rgb(2, 93, 168);
+                    color: #fff;
+                }
+                .cancel__btn{
+                    border: 1px solid rgb(2, 93, 168);;
+                }
+            }
+        }
+
+    }
+}
