--- a/client/src/components/css/LandingProductItems.scss
+++ b/client/src/components/css/LandingProductItems.scss
@@ -7,6 +7,7 @@
     .img{
         width: 90%;
         margin: 0 auto;
+        cursor: pointer;
         img{
             width: 100%;
             height: 100%;
@@ -18,8 +19,10 @@
         margin-top: 20px;
         text-align: center;
         p{
+            max-width: fit-content;
+            margin: 5px auto 0;
+            cursor: pointer;
             font-size: 18px;
-            margin-top: 5px;
         }
     }
 }
