--- a/client/src/components/css/ProductDetail.css
+++ b/client/src/components/css/ProductDetail.css
@@ -50,6 +50,8 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .product__detail .img .img__container {
@@ -73,6 +75,8 @@
 .product__detail .img .img__container .display__img img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .product__detail .img .img__container .display__img:hover {
@@ -299,6 +303,9 @@
     -ms-grid-row: 1;
     -ms-grid-column: 2;
     grid-area: main;
+  }
+  .product__detail .img .default__img img {
+    height: 668px;
   }
   .product__detail .img .img__container {
     -ms-grid-row: 1;
