--- a/client/src/components/css/Products.scss
+++ b/client/src/components/css/Products.scss
@@ -15,7 +15,7 @@
             padding: 0 5px;
             margin-bottom: 40px;
             list-style: none;
-            vertical-align: top;
+            align-self: flex-start;
             a{
                 text-decoration: none;
                 color: inherit;
@@ -28,9 +28,9 @@
                     cursor: pointer;
                     width: 100%;
                     max-width: 100%;
-                    max-height: 100%;
+                    height:260px;
                     object-fit: cover;
-                    vertical-align: bottom;
+                    vertical-align: top;
                 }
         
                 .purchase__icon{
@@ -62,6 +62,8 @@
                     text-align: center;
                 }
                 p{
+                    max-width: fit-content;
+                    margin: 0 auto;
                     font-family: 'Jost', sans-serif;
                     cursor: pointer;
                     font-size: 14px;
@@ -72,7 +74,19 @@
 }
 
 // media queries
-
+@media screen and (min-width:480px) and (max-width: 768px) {
+    .products__section{
+        .container{
+            .item{
+                .img{
+                    img{
+                        height: 320px;
+                    }
+                }
+            }
+        }
+    }
+}
 @media screen and (min-width: 768px) {
     .products__section{
         .container{
@@ -94,6 +108,7 @@
                     img{
                         border: 0;
                         max-width: 100%;
+                        height: 380px;
                         vertical-align: top;
                     }
                 }
@@ -106,13 +121,16 @@
     .products__section{
         .container{
             .item{
-                width: 25%;
+                width: 33.33%;
                 &:nth-child(4n){
                     padding-right: 0;
                     padding-left: 14px;
                 }
                 .img{
                     display: block;   
+                    img{
+                        height: 320px;
+                    }
                 }
             }
         }
