--- a/client/src/components/css/SortFilter.css
+++ b/client/src/components/css/SortFilter.css
@@ -101,6 +101,12 @@
   padding: 10px;
   height: 590px;
   overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
+.sort__filter .container .wrapper::-webkit-scrollbar {
+  width: 100%;
+  height: 10px;
 }
 
 @media screen and (max-width: 360px) {
@@ -252,6 +258,7 @@
 .sort__filter .container .done__btn .clear__all {
   -webkit-box-shadow: 0px 0px 1px #181717;
           box-shadow: 0px 0px 1px #181717;
+  border-left: 1px solid lightgray;
 }
 
 @media screen and (min-width: 480px) {
