--- a/client/src/components/css/SortFilter.scss
+++ b/client/src/components/css/SortFilter.scss
@@ -69,6 +69,11 @@
             padding: 10px;
             height: 590px;
             overflow-y: scroll;
+            scroll-behavior: smooth;
+            &::-webkit-scrollbar {
+                width: 100%;
+                height: 10px;
+            }
             @media screen and (max-width:360px){
                 height: 420px;
             }
@@ -176,6 +181,7 @@
             }
             .clear__all{
                 box-shadow: 0px 0px 1px rgb(24, 23, 23);
+                border-left: 1px solid rgb(211, 211, 211);
             }
 
         }
