--- a/client/src/components/css/loading.css
+++ b/client/src/components/css/loading.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: #ecfeff;
+  background-color: #f5f5f5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
