--- a/client/src/components/css/loading.scss
+++ b/client/src/components/css/loading.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: #ecfeff;
+    background-color: #f5f5f5;
     display: flex;
     justify-content: center;
     align-items: center;
