--- a/client/src/components/nav/css/smallNav.css
+++ b/client/src/components/nav/css/smallNav.css
@@ -387,4 +387,16 @@
     width: auto;
   }
 }
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .nav .container .menu .auth__pages {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .nav .container .menu .auth__pages .btn {
+    margin: 0 10px;
+  }
+}
 /*# sourceMappingURL=smallNav.css.map */
