--- a/client/src/components/nav/css/smallNav.scss
+++ b/client/src/components/nav/css/smallNav.scss
@@ -276,3 +276,18 @@
         }
     }   
 }
+
+@media screen and (min-width: 768px) and (max-width:992px) {
+    .nav{
+        .container{
+            .menu{
+                .auth__pages{
+                    flex-direction: row;
+                    .btn{
+                        margin: 0 10px;
+                    }
+                }
+            }
+        }
+    }
+}
