--- a/client/src/components/css/ProductDetail.css
+++ b/client/src/components/css/ProductDetail.css
@@ -48,7 +48,7 @@
 .product__detail .img .default__img img {
   cursor: pointer;
   width: 100%;
-  height: 100%;
+  height: 420px;
   margin: 0 auto;
   -o-object-fit: cover;
      object-fit: cover;
@@ -102,6 +102,10 @@
   font-size: 16px;
   text-transform: uppercase;
   background-color: #f1f1f1;
+}
+
+.product__detail form .size__options select option {
+  text-transform: uppercase;
 }
 
 .product__detail form .fieldset {
