--- a/client/src/components/css/ProductDetail.scss
+++ b/client/src/components/css/ProductDetail.scss
@@ -37,7 +37,7 @@
             img{
                 cursor: pointer;
                 width: 100%;
-                height: 100%;
+                height: 420px;
                 margin: 0 auto;
                 object-fit: cover;
             }
@@ -83,6 +83,9 @@
                 font-size: 16px;
                 text-transform: uppercase;
                 background-color: rgb(241, 241, 241);
+                option{
+                    text-transform: uppercase;
+                }
             }
         }
         .fieldset{
