--- a/client/src/components/nav/css/nav.scss
+++ b/client/src/components/nav/css/nav.scss
@@ -5,12 +5,12 @@
         }
         .flash__sale{
             // background-color: #171613;
-            background-color: rgb(207, 84, 35);
+            background-color: #fa9d24;
             width: 100%;
             padding:15px 7px;
             p{
                 font-family: 'Jost', sans-serif;
-                font-weight: 500;
+                font-weight: bold;
                 font-size: 1rem;
                 color: #fff;
                 text-align: center;
@@ -41,7 +41,7 @@
             }
             .flash__sale{
                 p{
-                    font-size: 1.5rem;
+                    font-size: 1.7rem;
                 }
             }
         }
