--- a/client/src/components/nav/css/largeNav.css
+++ b/client/src/components/nav/css/largeNav.css
@@ -1,3 +1,14 @@
+.large__nav .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #4d4d4d;
+  opacity: 0.3;
+  z-index: 3;
+}
+
 .large__nav .container {
   padding: 10px 0 0;
 }
@@ -10,9 +21,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 15px 30px 10px 20px;
 }
 
@@ -20,9 +31,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .large__nav .container .wrapper .gender__title ul li {
