--- a/client/src/components/nav/css/largeNav.scss
+++ b/client/src/components/nav/css/largeNav.scss
@@ -1,16 +1,26 @@
 .large__nav{
+    .overlay{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #4d4d4d;
+        opacity: 0.3;
+        z-index: 3;
+    }
     .container {
         padding: 10px 0 0;
         .wrapper{
             position: relative;
             display: flex;
             justify-content: space-between;
-            align-items: flex-end;
+            align-items: center;
             padding: 15px 30px 10px 20px;
             .gender__title{
                 ul{
                     display: flex;
-                    align-items: flex-end;
+                    align-items: center;
                     li{
                         text-transform: capitalize;
                         list-style: none;
