--- a/client/src/components/nav/css/navAuth.scss
+++ b/client/src/components/nav/css/navAuth.scss
@@ -35,9 +35,11 @@
                 h4{
                     text-transform: capitalize;
                     font-weight: normal;
+                    cursor: pointer;
                 }
             }
             button{
+                margin-top: 7px;
                 text-decoration: underline;
                 cursor: pointer;
             }
