--- a/client/src/components/pages/auth/css/login.scss
+++ b/client/src/components/pages/auth/css/login.scss
@@ -41,6 +41,7 @@
                         font-weight: 500;
                     }
                     input{
+                        font-size: 16px;
                         width: 100%;
                         padding: 10px;
                         border: 1px solid rgb(209, 209, 209);
@@ -74,7 +75,7 @@
             background-color: rgb(240, 240, 240);
             margin: 70px 0 30px;
             color: #252525;
-            .wrapper{
+            .wrapper, .wrapper__login__order{
                 width: 85%;
                 margin:  0 auto;
                 padding: 20px 0;
@@ -160,6 +161,12 @@
         max-width: 75%;
         .container{
             .create__new__Account__form{
+                .wrapper__login__order{
+                    .submit__btn{
+                        max-width: 50%;
+                        margin: 20px auto 10px;
+                    }
+                }
                 
                 .wrapper{
                     display: grid;
