--- a/client/src/components/css/Showcase.css
+++ b/client/src/components/css/Showcase.css
@@ -5,7 +5,9 @@
 
 .showcase .container .banner img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .showcase .container .content__wrapper {
