--- a/client/src/components/css/Showcase.scss
+++ b/client/src/components/css/Showcase.scss
@@ -5,7 +5,8 @@
         .banner{
           img{
              width: 100%; 
-             height: auto;
+             height: 100%;
+             object-fit: cover;
           }
         }
         .content__wrapper{
