--- a/client/src/components/pages/auth/css/login.scss
+++ b/client/src/components/pages/auth/css/login.scss
@@ -45,6 +45,7 @@
                         width: 100%;
                         padding: 10px;
                         border: 1px solid rgb(209, 209, 209);
+                        outline: none;
                         background-color: #fff;
                     }
                 }
