--- a/client/src/components/pages/auth/css/signup.scss
+++ b/client/src/components/pages/auth/css/signup.scss
@@ -60,9 +60,11 @@
                         font-weight: 500;
                     }
                     input{
+                        font-size: 16px;
                         width: 100%;
                         padding: 10px;
                         border: 1px solid rgb(209, 209, 209);
+                        outline: none;
                         background-color: #fff;
                         cursor: pointer;
                     }
