--- a/client/src/components/css/MainProducts.scss
+++ b/client/src/components/css/MainProducts.scss
@@ -6,6 +6,7 @@
     img{
         width: 100%;
         min-height: 100%;
+        object-fit: cover;
         cursor: pointer;
     }
     .product{
@@ -38,5 +39,16 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
         grid-gap: 20px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .main__products{
+        img{
+            max-height: 90vh;
+        }
+        a{
+            font-size: 2.5rem;
+        }
     }
 }
