--- a/client/src/components/css/Process.css
+++ b/client/src/components/css/Process.css
@@ -48,6 +48,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .process {
+    margin-bottom: -9rem;
+  }
   .process .container {
     display: -ms-grid;
     display: grid;
