--- a/client/src/components/css/Process.scss
+++ b/client/src/components/css/Process.scss
@@ -1,54 +1,55 @@
-.process{
-    margin: 40px 0 0px;
-    background-color: rgb(248, 248, 248);
-    box-shadow: 0px 0px 2px grey;
+.process {
+  margin: 40px 0 0px;
+  background-color: rgb(248, 248, 248);
+  box-shadow: 0px 0px 2px grey;
 
-    .container{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 10px 0;
-        .content{
-            margin-top: 30px;
-            text-align: center;
-            margin-bottom: 60px;
-            .icon{
-                margin-bottom: 10px;
-               img{
-                   max-width: 100%;
-                   height: 60px;
-               }
-            }
-            .body{
-                h3{
-                    text-transform: capitalize;
-                    font-weight: 600;
-                }
-                p{
-                    margin-top: 10px;
-                    color: rgb(102, 102, 102);
-                }
-            }
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+    .content {
+      margin-top: 30px;
+      text-align: center;
+      margin-bottom: 60px;
+      .icon {
+        margin-bottom: 10px;
+        img {
+          max-width: 100%;
+          height: 60px;
         }
+      }
+      .body {
+        h3 {
+          text-transform: capitalize;
+          font-weight: 600;
+        }
+        p {
+          margin-top: 10px;
+          color: rgb(102, 102, 102);
+        }
+      }
     }
+  }
 }
 
 // media query
-@media screen and (min-width:768px){
-    .process{
-        .container{
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: auto;
-            grid-gap: 20px;
-        }
+@media screen and (min-width: 768px) {
+  .process {
+    margin-bottom: -9rem;
+    .container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: auto;
+      grid-gap: 20px;
     }
+  }
 }
-@media screen and (min-width:992px){
-    .process{
-        .container{
-            grid-template-columns: repeat(4, 1fr);
-        }
+@media screen and (min-width: 992px) {
+  .process {
+    .container {
+      grid-template-columns: repeat(4, 1fr);
     }
+  }
 }
